--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,20 @@
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion '19.1.0'
+    compileSdkVersion 26
+    buildToolsVersion '26.0.3'
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 19
-        versionCode 1
-        versionName '1.0'
+        targetSdkVersion 22
+        versionCode 2
+        versionName '1.1'
     }
-    buildTypes {
-        release {
-            runProguard false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
-        }
-    }
+//    buildTypes {
+//        release {
+//            runProguard false
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+//        }
+//    }
 
     lintOptions {
         abortOnError false
@@ -26,16 +26,21 @@ android {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: '*.jar')
-//    compile files('libs/android-support-v4.jar')
-//    compile files('libs/commons-codec-1.5.jar')
-//    compile files('libs/commons-logging-1.1.jar')
-//    compile files('libs/dom4j-1.6.1.jar')
-//    compile files('libs/log4j-1.2.13.jar')
-//    compile files('libs/schemaorg_apache_xmlbeans_new.jar')
-//    compile files('libs/sjsxp.jar')
-//    compile files('libs/xmlbeans-2.3.0.jar')
+    compile fileTree(include: '*.jar', dir: 'libs')
+    implementation 'com.android.support:support-compat:26.1.0'
+    //    compile files('libs/android-support-v4.jar')
+    //    compile files('libs/commons-codec-1.5.jar')
+    //    compile files('libs/commons-logging-1.1.jar')
+    //    compile files('libs/dom4j-1.6.1.jar')
+    //    compile files('libs/log4j-1.2.13.jar')
+    //    compile files('libs/schemaorg_apache_xmlbeans_new.jar')
+    //    compile files('libs/sjsxp.jar')
+    //    compile files('libs/xmlbeans-2.3.0.jar')
 }
