--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,17 @@
 buildscript {
     repositories {
         mavenCentral()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.11.2'
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 
 allprojects {
     repositories {
         mavenCentral()
+        google()
     }
 }
 
