--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: '*.jar', dir: 'libs')
+    implementation fileTree(include: '*.jar', dir: 'libs')
     implementation 'com.android.support:support-compat:26.1.0'
     //    compile files('libs/android-support-v4.jar')
     //    compile files('libs/commons-codec-1.5.jar')
